// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout calculateLayout empty flow 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 168,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection from parent default branch to the previous element 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 276,
      "joinOffsetY": 180,
      "labelOffset": 48,
      "offsetX": 264,
      "w": 616,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 132,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 516,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 564,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 264,
      "w": 616,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection from parent fault branch to the previous element 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 216,
      "joinOffsetY": 120,
      "labelOffset": 48,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "branch-guid:-1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 132,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 352,
      "y": 264,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 456,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 504,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 264,
      "w": 792,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection from parent first branch to the previous element 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 276,
      "joinOffsetY": 180,
      "labelOffset": 48,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 132,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": -220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 516,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 564,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection from parent first branch to the previous element and the source node menu is open 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 473,
      "joinOffsetY": 377,
      "labelOffset": 48,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 329,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 264,
      "x": -220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 317,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 176,
      "x": 44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 317,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 176,
      "x": 220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 713,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 761,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection from parent first branch to the previous element when branch head connector menu is open 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 497,
      "joinOffsetY": 401,
      "labelOffset": 48,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 353,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": -220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 737,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 785,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection from parent first branch to the previous element when merge connector menu is open 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 485,
      "joinOffsetY": 180,
      "labelOffset": 48,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 132,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": -220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 240,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 725,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 773,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection to the previous element 1`] = `
Object {
  "goto-source-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 108,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "goto-target-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 396,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection to the previous element and goTo connector menu is open 1`] = `
Object {
  "goto-source-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 329,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "goto-target-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 617,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with a GoTo connection to the previous element and source node menu is open 1`] = `
Object {
  "goto-source-guid": Object {
    "layout": Object {
      "addOffset": 245,
      "h": 293,
      "joinOffsetY": 0,
      "labelOffset": 233,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 240,
    },
    "prevLayout": undefined,
  },
  "goto-target-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 581,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with decision and ended middle branch 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 288,
      "joinOffsetY": 192,
      "labelOffset": 48,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 192,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": -44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1-end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 220,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 408,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 456,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 308,
      "w": 616,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with decision with 3 branches where the middle branch is a left bottom edge 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 432,
      "joinOffsetY": 336,
      "labelOffset": 48,
      "offsetX": 396,
      "w": 968,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 192,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": -308,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:0-end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 336,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 264,
      "w": 528,
      "x": 308,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:2-branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 192,
      "joinOffsetY": 120,
      "labelOffset": 48,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "branch-guid:2-branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 144,
    },
  },
  "branch-guid:2-branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 144,
    },
  },
  "branch-guid:2-branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 144,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 552,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 600,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 396,
      "w": 968,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with decision with 3 branches with decision menu opened 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 629,
      "joinOffsetY": 533,
      "labelOffset": 48,
      "offsetX": 396,
      "w": 968,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 389,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 264,
      "x": -308,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:0-end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 341,
    },
    "prevLayout": undefined,
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 317,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 176,
      "x": -44,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 533,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 264,
      "w": 528,
      "x": 308,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:2-branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 192,
      "joinOffsetY": 120,
      "labelOffset": 48,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 341,
    },
    "prevLayout": undefined,
  },
  "branch-guid:2-branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 341,
    },
  },
  "branch-guid:2-branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 341,
    },
  },
  "branch-guid:2-branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 341,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 749,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 797,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 396,
      "w": 968,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with decision with one element on left branch 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 336,
      "joinOffsetY": 240,
      "labelOffset": 48,
      "offsetX": 220,
      "w": 440,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 240,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": -132,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 132,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-left-head-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 96,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 456,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 504,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 220,
      "w": 440,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with dynamic node component 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 404,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 452,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen-guid": Object {
    "layout": Object {
      "addOffset": 224,
      "h": 284,
      "joinOffsetY": 0,
      "labelOffset": 212,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with empty decision 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 216,
      "joinOffsetY": 120,
      "labelOffset": 48,
      "offsetX": 176,
      "w": 352,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -88,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 88,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 336,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 384,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 176,
      "w": 352,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with empty decision with 3 branches 1`] = `
Object {
  "branch-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 216,
      "joinOffsetY": 120,
      "labelOffset": 48,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "branch-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": -176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:1": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "branch-guid:2": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 176,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 336,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 384,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 264,
      "w": 528,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with empty loop 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 360,
    },
    "prevLayout": undefined,
  },
  "loop-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 240,
      "joinOffsetY": 144,
      "labelOffset": 48,
      "offsetX": 148,
      "w": 296,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 144,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 408,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 148,
      "w": 324,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with loop and nested loop - loop menu opened 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 797,
    },
    "prevLayout": undefined,
  },
  "loop-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 677,
      "joinOffsetY": 581,
      "labelOffset": 48,
      "offsetX": 208,
      "w": 456,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 581,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 148,
      "w": 336,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "loop-guid:0-loop-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 216,
      "joinOffsetY": 144,
      "labelOffset": 48,
      "offsetX": 148,
      "w": 296,
      "x": 0,
      "y": 341,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0-loop-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 144,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 341,
    },
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 845,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 208,
      "w": 456,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with loop and nested loop 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 600,
    },
    "prevLayout": undefined,
  },
  "loop-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 480,
      "joinOffsetY": 384,
      "labelOffset": 48,
      "offsetX": 208,
      "w": 456,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 384,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 148,
      "w": 336,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "loop-guid:0-loop-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 216,
      "joinOffsetY": 144,
      "labelOffset": 48,
      "offsetX": 148,
      "w": 296,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0-loop-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 144,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 176,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 144,
    },
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 648,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 208,
      "w": 456,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with loop with ended branch 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 432,
    },
    "prevLayout": undefined,
  },
  "loop-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 312,
      "joinOffsetY": 216,
      "labelOffset": 48,
      "offsetX": 148,
      "w": 424,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "loop-guid:0": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 216,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 304,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 120,
    },
  },
  "loop-guid:0-end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 480,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 148,
      "w": 424,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with only the immediate scheduled path with start menu closed 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 264,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 312,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen1-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 144,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 84,
      "h": 144,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with only the immediate scheduled path with start menu opened 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 461,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 509,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen1-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 341,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 341,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;

exports[`layout calculateLayout flow with scheduled paths 1`] = `
Object {
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 653,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 701,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 220,
      "w": 440,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "screen1-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 96,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 341,
    },
    "prevLayout": undefined,
  },
  "screen2-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 533,
    },
    "prevLayout": undefined,
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 36,
      "h": 533,
      "joinOffsetY": 437,
      "labelOffset": 48,
      "offsetX": 220,
      "w": 440,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
  "start-guid:0": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 437,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 264,
      "x": -132,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid:1": Object {
    "layout": Object {
      "addOffset": 281,
      "h": 317,
      "joinOffsetY": 0,
      "labelOffset": 245,
      "offsetX": 88,
      "w": 176,
      "x": 132,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`layout calculateLayout flow with two elements with fault branches 1`] = `
Object {
  "action-element-one": Object {
    "layout": Object {
      "addOffset": 245,
      "h": 305,
      "joinOffsetY": 0,
      "labelOffset": 233,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "action-element-one:-1": Object {
    "layout": Object {
      "addOffset": 245,
      "h": 353,
      "joinOffsetY": 0,
      "labelOffset": 209,
      "offsetX": 88,
      "w": 264,
      "x": 528,
      "y": 144,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "action-element-two": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 425,
    },
    "prevLayout": undefined,
  },
  "action-element-two:-1": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 168,
      "joinOffsetY": 0,
      "labelOffset": 24,
      "offsetX": 88,
      "w": 264,
      "x": 264,
      "y": 449,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "end-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 545,
    },
    "prevLayout": undefined,
  },
  "fault-branch-head-guid-one": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 305,
    },
    "prevLayout": undefined,
  },
  "fault-branch-head-guid-two": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 120,
    },
    "prevLayout": undefined,
  },
  "root:0": Object {
    "layout": Object {
      "addOffset": 0,
      "h": 665,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 88,
      "w": 792,
      "x": 0,
      "y": 0,
    },
    "prevLayout": Object {
      "addOffset": 0,
      "h": 0,
      "joinOffsetY": 0,
      "labelOffset": 0,
      "offsetX": 0,
      "w": 0,
      "x": 0,
      "y": 0,
    },
  },
  "start-guid": Object {
    "layout": Object {
      "addOffset": 60,
      "h": 120,
      "joinOffsetY": 0,
      "labelOffset": 48,
      "offsetX": 88,
      "w": 264,
      "x": 0,
      "y": 0,
    },
    "prevLayout": undefined,
  },
}
`;
